--- a/monitoring_server/prometheus/prometheus.yml
+++ b/monitoring_server/prometheus/prometheus.yml
@@ -1,2 +1,3 @@
-static_configs:
-    - targets: [‘localhost:9090’, ‘localhost:9100’]
+global:
+    static_configs:
+        - targets: [‘localhost:9090’, ‘localhost:9100’]
