--- a/monitoring_server/prometheus/prometheus.yml
+++ b/monitoring_server/prometheus/prometheus.yml
@@ -1,4 +1,6 @@
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-        - targets: [localhost:9090, localhost:9100]
+        - targets:
+            - "localhost:9090"
+            - "localhost:9100"
